kubernetes/db-pod.yml
kind: Pod
apiVersion: v1
metadata:
  name: db
  namespace: zunik-me
  labels:
    app: db
spec:
  containers:
    - name: db
      image: "mariadb:10.2"
      volumeMounts:
      - mountPath: "/var/lib/mysql"
        name: datadir
      - mountPath: "/etc/mysql/conf.d"
        name: dbcnf
  volumes:
    - name: datadir
      persistentVolumeClaim:
        claimName: db
    - name: dbcnf
      configMap:
        name: db-cnf
