kubernetes/db-deploy.yml

kind: Pod
apiVersion: v1
metadata:
  name: db
  namespace: zunik-me
  labels:
    app: db
spec:
  containers:
    - name: db
      image: "mariadb:10.2"
      ports:
        - containerPort: 3306
      volumeMounts:
      - mountPath: "/var/lib/mysql"
        name: datadir
      - mountPath: "/etc/mysql/conf.d"
        name: dbcnf
  volumes:
    - name: datadir
      persistentVolumeClaim:
        claimName: db
    - name: dbcnf
      configMap:
        name: db-cnf
  nodeSelector:
    kubernetes.io/hostname: pool-d4b8knhi3-0ybi

---

apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: zunik-me
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    app: db
