kubernetes/db-services.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: zunik-me
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: db
  type: ClusterIP
