kubernetes/web-services.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: zunik-me
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: web
