kubernetes/web-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  namespace: zunik-me
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = 'www.zunik.me') {
        rewrite ^ https://zunik.me$request_uri permanent;
      }
spec:
  tls:
    - hosts:
      - archive.zunik.me
      - www.zunik.me
      secretName: zunik-me-tls
  rules:
    - host: archive.zunik.me
      http:
        paths:
          - backend:
              serviceName: web
              servicePort: 80
    - host: www.zunik.me
      http:
        paths:
          - backend:
              serviceName: web
              servicePort: 80
